# CUBIT

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  README  README.md  build-light.sh  build.sh  cdf_sz.py  figure1.py  gen_graphs.sh  gen_graphs_normal.sh  generate.py  license.txt  plot.sh  run.py  run.sh  run_sz.py  test.py
eva-scripts/: bar_naive_latency.py  build_bitvector.py  cdf_sz_1B.py  cdf_sz_earth.py  figure1.py  gen_earth.py  gen_graphs_1B.sh  gen_graphs_MT.sh  gen_graphs_Para.sh  gen_graphs_Seg.sh  gen_graphs_WPMT.sh  gen_graphs_core.sh  gen_graphs_earth.sh  gen_graphs_zipf.sh  gen_zipf.py  run_1B.py  run_MT.py  run_Para.py  run_Seg.py  run_WPMT.py  run_core.py  run_earth.py  run_naive_latency.py  run_sz_1B.py  run_sz_WPMT.py  run_zipf.py
eva-scripts/backup/: analysis.py  run_multi.py
figures-scripts/: bar_naive_latency.py  cdf_sz_1B.py  cdf_sz_earth.py  cdf_sz_zipf.py  figure1.py  gen_graphs_1B.sh  gen_graphs_MT.sh  gen_graphs_Para.sh  gen_graphs_earth.sh  gen_graphs_normal.sh  gene_zipf.py  generate.py  merge_2.sh  run_naive_latency.py  run_sz.py  run_sz.sh  run_sz_1B.py  run_sz_MT.py  run_sz_ParaCNT.py  run_sz_Seg.py  run_sz_WPMT.py  run_sz_earth.py  run_sz_earth.sh  run_sz_latency.py  run_sz_zipf.py  run_sz_zipf.sh
figures-scripts/backup/: fp.sh  get_value.sh  merge.sh  run.py  run_multi.py
gnuplot-scripts/: Makefile  Throughput.txt  cdf_sz_zipf.py  check_dat_files.sh  core_experiments.gnu  fence.gnu  gen_graphs_zipf.sh  intro.gnu  mem.gnu  multiple_1B.gnu  multiple_MT.gnu  multiple_Para.gnu  multiple_blue.gnu  multiple_sz.gnu  multiple_sz_1B.gnu  multiple_sz_MT.gnu  multiple_sz_Para.gnu  multiple_sz_Seg.gnu  multiple_sz_WPMT.gnu  multiple_sz_earth.gnu  multiple_sz_zipf.gnu  needed_dat_files  run_sz_latency_ratio.py  single_sz.gnu  test_latency.gnu  thres.gnu  tpch.gnu  upbit_vs_scan.gnu
gnuplot-scripts/backup/: Throughput.txt  gen_graphs_core_lk.sh  gen_graphs_normal_lk.sh  getvalue.gnu  prepare_normalized.sh  run_latency_ratio.py  run_sz_latency_ratio.py  test_latency.gnu
gnuplot-scripts/backup/twin_lines/: multiple_1B.gnu  multiple_MT.gnu  multiple_sz.gnu  multiple_sz_1B.gnu  multiple_sz_MT.gnu  multiple_sz_WPMT.gnu  multiple_sz_earth.gnu  multiple_sz_zipf.gnu  multiple_zipf.gnu
gnuplot-scripts/backup/ub&lk&lf&naive/: multiple_sz_ub+cubit-lk+cubit-lf.gnu  multiple_sz_ub+cubit-lk+cubit-lf_naive_zipf.gnu  multiple_sz_ub+nbub-lk+nbub-lf.gnu  multiple_sz_ub+nbub-lk+nbub-lf_1B.gnu  multiple_sz_ub+nbub-lk+nbub-lf_earth.gnu  multiple_sz_ub+nbub-lk+nbub-lf_naive.gnu  multiple_sz_ub+nbub-lk+nbub-lf_naive_earth.gnu  multiple_sz_ub+nbub-lk+nbub-lf_naive_zipf.gnu  multiple_sz_ub+nbub-lk+nbub-lf_zipf.gnu  multiple_ub+cubit-lk+cubit-lf_earth.gnu  multiple_ub+cubit-lk+cubit-lf_naive.gnu
src/: config.h  threadpool.h
src/cubit/: table.cpp  table.h  table_lf.cpp  table_lf.h  table_lk.cpp  table_lk.h  test.cpp
src/disk/: disk.cpp  table.cpp  table.h
src/fastbit/: Doxyfile  array_t.cpp  array_t.h  bitvector.cpp  bitvector.h  bitvector64.cpp  bitvector64.h  blob.cpp  blob.h  bord.cpp  bord.h  bordm.cpp  bundle.cpp  bundle.h  capi.cpp  capi.h  category.cpp  category.h  colValues.cpp  colValues.h  column.cpp  column.h  const.h  countQuery.cpp  countQuery.h  dictionary.cpp  dictionary.h  fastbit-0.7.pc.in  fastbit-config.h  fileManager.cpp  fileManager.h  filter.cpp  filter.h  fromClause.cpp  fromClause.h  fromLexer.cc  fromLexer.h  fromLexer.ll  fromParser.cc  fromParser.hh  (+93 more)
src/naive/: table.cpp  table.h
src/nbub/: table.cpp  table.h  table_lf.cpp  table_lf.h  table_lk.cpp  table_lk.h  test.cpp
src/nicolas/: base_table.cpp  base_table.h  bench.cpp  nicolas.cpp  perf.cpp  perf.h  segBtv.cpp  segBtv.h  tablex.cpp  tablex.h  util.cpp  util.h
src/nicolas/proto/: queries.pb.cc  queries.pb.h  queries.proto
src/nicolas/test/: test_common.cpp
src/part/: table.cpp  table.h
src/ub/: table.cpp  table.h
src/ucb/: table.cpp  table.h
